[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "clingo",
    "numpy",
    "scipy",
    "sympy",
    "pytest",
    "math",
    "re",
    "statistics",
    "gekko",
    "cProfile",
    "pstats",
    "multiprocessing",
    "itertools",
    "argparse"
]
build-backend = "setuptools.build_meta"