[metadata]
name = pasta
version = 1.0.0
author = Damiano Azzolini
author_email = damiano.azzolini@unife.it
description = Inference in probabilistc answer set programs under the credal semantics and with statistical statements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/damianoazzolini/pasta
project_urls =
    Bug Tracker = https://github.com/damianoazzolini/pasta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = pasta
packages = find:
python_requires = >=3.7
install_requires =
    clingo>=5.5
    numpy>=1.21.2

[options.packages.find]
where=pasta